--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build --dist-dir build --public-url /desafio-modulo-5",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
